# when-the

./: Dockerfile  Makefile  app.py  docker-compose.yml  pyproject.toml
stuff_practice.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
stuff_practice/core/: config.py  logging.py
stuff_practice/nlp/: nlp.py
templates/: session.html
templates/js_src/: like_button.js  my_socket.js
tests/: test_stuff_practice.py
when-the/lib/: producer.py
when_the/core/: config.py
when_the/lib/: consumer.py
when_the/nlp/: nlp.py
