[tool.poetry]
name = "stuff-practice"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.7"
aio-pika = "^6.6.1"
spacy = "^2.3.2"
loguru = "^0.5.1"
environs = "^8.0.0"
Random-Word = "^1.0.4"
redis = "^3.5.3"
flask = "^1.1.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pylint = "^2.5.3"
flake8 = "^3.8.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
